packages/lightning_db_dart/src/lightning_db_ffi.h

typedef enum CompressionType {
  CompressionTypeNone = 0,
  CompressionTypeZstd = 1,
  CompressionTypeLz4 = 2,
  CompressionTypeSnappy = 3,
} CompressionType;
typedef enum ConsistencyLevel {
  ConsistencyLevelEventual = 0,
  ConsistencyLevelStrong = 1,
} ConsistencyLevel;
typedef enum ErrorCode {
  ErrorCodeSuccess = 0,
  ErrorCodeInvalidArgument = 1,
  ErrorCodeDatabaseNotFound = 2,
  ErrorCodeDatabaseExists = 3,
  ErrorCodeTransactionNotFound = 4,
  ErrorCodeTransactionConflict = 5,
  ErrorCodeKeyNotFound = 6,
  ErrorCodeIoError = 7,
  ErrorCodeCorruptedData = 8,
  ErrorCodeOutOfMemory = 9,
  ErrorCodeBufferOverflow = 10,
  ErrorCodeInvalidPointer = 11,
  ErrorCodeInvalidAlignment = 12,
  ErrorCodeInvalidUtf8 = 13,
  ErrorCodeIntegerOverflow = 14,
  ErrorCodeBufferTooLarge = 15,
  ErrorCodeStringTooLong = 16,
  ErrorCodeInvalidHandle = 17,
  ErrorCodeSecurityViolation = 18,
  ErrorCodePanicPrevented = 19,
  ErrorCodeUnknown = 999,
} ErrorCode;
typedef enum WalSyncMode {
  WalSyncModeSync = 0,
  WalSyncModePeriodic = 1,
  WalSyncModeAsync = 2,
} WalSyncMode;
/**
 * Result structure for returning data across FFI boundary
 */
typedef struct ByteResult {
  uint8_t *DATA;
  uintptr_t LEN;
  int32_t ERROR_CODE;
} ByteResult;
FFI_PLUGIN_EXPORT  int32_t lightning_db_init(void);
FFI_PLUGIN_EXPORT 
void _force_enum_inclusion(enum ErrorCode _error_code,
                           enum ConsistencyLevel _consistency_level,
                           enum WalSyncMode _wal_sync_mode,
                           enum CompressionType _compression_type);
/**
 * Get the last error message
 *
 * # Safety
 * - The returned pointer is valid until the next call to any function that sets an error
 * - The caller must not free the returned pointer
 */
FFI_PLUGIN_EXPORT  const char *lightning_db_get_last_error(void);
/**
 * Get the last error message and copy it to a buffer
 *
 * # Safety
 * - buffer must be valid for buffer_len bytes
 * - Returns the number of bytes written (excluding null terminator)
 */
FFI_PLUGIN_EXPORT  int32_t lightning_db_get_last_error_buffer(char *buffer, uintptr_t buffer_len);
/**
 * Clear the last error
 */
FFI_PLUGIN_EXPORT  void lightning_db_clear_error(void);
/**
 * Create a new Lightning DB database with comprehensive security validation
 *
 * # Safety
 * - path must be a valid null-terminated UTF-8 string
 * - out_handle must be a valid pointer to u64
 * - Returns 0 on success with handle stored in out_handle, error code on failure
 */
FFI_PLUGIN_EXPORT  int32_t lightning_db_create(const char *path, uint64_t *out_handle);
/**
 * Open an existing Lightning DB database with comprehensive validation
 *
 * # Safety
 * - path must be a valid null-terminated UTF-8 string
 * - out_handle must be a valid pointer to u64
 * - Returns 0 on success with handle stored in out_handle, error code on failure
 */
FFI_PLUGIN_EXPORT  int32_t lightning_db_open(const char *path, uint64_t *out_handle);
/**
 * Create a database with custom configuration and comprehensive validation
 *
 * # Safety
 * - path must be a valid null-terminated UTF-8 string
 * - out_handle must be a valid pointer to u64
 * - All numeric parameters are now validated
 * - Returns 0 on success with handle stored in out_handle, error code on failure
 */
FFI_PLUGIN_EXPORT 
int32_t lightning_db_create_with_config(const char *path,
                                        uint64_t cache_size,
                                        enum CompressionType compression_type,
                                        enum WalSyncMode wal_sync_mode,
                                        uint64_t *out_handle);
/**
 * Close a database and free its resources
 *
 * # Safety
 * - The handle must be valid
 * - The handle must not be used after calling this function
 */
FFI_PLUGIN_EXPORT  int32_t lightning_db_close(uint64_t handle);
/**
 * Put a key-value pair into the database with comprehensive validation
 *
 * # Safety
 * - key must be valid for key_len bytes
 * - value must be valid for value_len bytes
 * - All parameters are now comprehensively validated
 */
FFI_PLUGIN_EXPORT 
int32_t lightning_db_put(uint64_t handle,
                         const uint8_t *key,
                         uintptr_t key_len,
                         const uint8_t *value,
                         uintptr_t value_len);
/**
 * Get a value from the database with comprehensive validation
 *
 * # Safety
 * - key must be valid for key_len bytes
 * - The returned ByteResult must be freed using lightning_db_free_bytes
 * - All parameters are now comprehensively validated
 */
FFI_PLUGIN_EXPORT 
struct ByteResult lightning_db_get(uint64_t handle,
                                   const uint8_t *key,
                                   uintptr_t key_len);
/**
 * Delete a key from the database
 *
 * # Safety
 * - key must be valid for key_len bytes
 * - Returns 0 on success (key deleted), 1 if key not found, negative on error
 */
FFI_PLUGIN_EXPORT 
int32_t lightning_db_delete(uint64_t handle,
                            const uint8_t *key,
                            uintptr_t key_len);
/**
 * Sync the database to disk with validation
 *
 * # Safety
 * - The handle must be valid
 */
FFI_PLUGIN_EXPORT  int32_t lightning_db_sync(uint64_t handle);
/**
 * Checkpoint the database with validation
 *
 * # Safety
 * - The handle must be valid
 */
FFI_PLUGIN_EXPORT  int32_t lightning_db_checkpoint(uint64_t handle);
/**
 * Put with consistency level and comprehensive validation
 *
 * # Safety
 * - key must be valid for key_len bytes
 * - value must be valid for value_len bytes
 * - All parameters are now comprehensively validated
 */
FFI_PLUGIN_EXPORT 
int32_t lightning_db_put_with_consistency(uint64_t handle,
                                          const uint8_t *key,
                                          uintptr_t key_len,
                                          const uint8_t *value,
                                          uintptr_t value_len,
                                          enum ConsistencyLevel consistency);
/**
 * Get with consistency level
 *
 * # Safety
 * - key must be valid for key_len bytes
 * - The returned ByteResult must be freed using lightning_db_free_bytes
 */
FFI_PLUGIN_EXPORT 
struct ByteResult lightning_db_get_with_consistency(uint64_t handle,
                                                    const uint8_t *key,
                                                    uintptr_t key_len,
                                                    enum ConsistencyLevel consistency);
/**
 * Free bytes allocated by this library with validation
 *
 * # Safety
 * - The pointer must have been allocated by this library with the given length
 * - The pointer must not be used after calling this function
 */
FFI_PLUGIN_EXPORT  void lightning_db_free_bytes(uint8_t *ptr, uintptr_t len);