lightning_db_dart/lib/lightning_db_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/lightning_db_ffi.h`.
class LightningDbBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LightningDbBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LightningDbBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int lightning_db_init() {
    return _lightning_db_init();
  }

  late final _lightning_db_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('lightning_db_init');
  late final _lightning_db_init =
      _lightning_db_initPtr.asFunction<int Function()>();

  void _force_enum_inclusion(
    ErrorCode _error_code,
    ConsistencyLevel _consistency_level,
    WalSyncMode _wal_sync_mode,
    CompressionType _compression_type,
  ) {
    return __force_enum_inclusion(
      _error_code.value,
      _consistency_level.value,
      _wal_sync_mode.value,
      _compression_type.value,
    );
  }

  late final __force_enum_inclusionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.UnsignedInt, ffi.UnsignedInt, ffi.UnsignedInt,
              ffi.UnsignedInt)>>('_force_enum_inclusion');
  late final __force_enum_inclusion =
      __force_enum_inclusionPtr.asFunction<void Function(int, int, int, int)>();

  /// Get the last error message
  ///
  /// # Safety
  /// - The returned pointer is valid until the next call to any function that sets an error
  /// - The caller must not free the returned pointer
  ffi.Pointer<ffi.Char> lightning_db_get_last_error() {
    return _lightning_db_get_last_error();
  }

  late final _lightning_db_get_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'lightning_db_get_last_error');
  late final _lightning_db_get_last_error = _lightning_db_get_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Get the last error message and copy it to a buffer
  ///
  /// # Safety
  /// - buffer must be valid for buffer_len bytes
  /// - Returns the number of bytes written (excluding null terminator)
  int lightning_db_get_last_error_buffer(
    ffi.Pointer<ffi.Char> buffer,
    int buffer_len,
  ) {
    return _lightning_db_get_last_error_buffer(
      buffer,
      buffer_len,
    );
  }

  late final _lightning_db_get_last_error_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Char>,
              ffi.UintPtr)>>('lightning_db_get_last_error_buffer');
  late final _lightning_db_get_last_error_buffer =
      _lightning_db_get_last_error_bufferPtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  /// Clear the last error
  void lightning_db_clear_error() {
    return _lightning_db_clear_error();
  }

  late final _lightning_db_clear_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'lightning_db_clear_error');
  late final _lightning_db_clear_error =
      _lightning_db_clear_errorPtr.asFunction<void Function()>();

  /// Create a new Lightning DB database
  ///
  /// # Safety
  /// - path must be a valid null-terminated UTF-8 string
  /// - Returns 0 on success with handle stored in out_handle, error code on failure
  int lightning_db_create(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint64> out_handle,
  ) {
    return _lightning_db_create(
      path,
      out_handle,
    );
  }

  late final _lightning_db_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint64>)>>('lightning_db_create');
  late final _lightning_db_create = _lightning_db_createPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint64>)>();

  /// Open an existing Lightning DB database
  ///
  /// # Safety
  /// - path must be a valid null-terminated UTF-8 string
  /// - Returns 0 on success with handle stored in out_handle, error code on failure
  int lightning_db_open(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint64> out_handle,
  ) {
    return _lightning_db_open(
      path,
      out_handle,
    );
  }

  late final _lightning_db_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint64>)>>('lightning_db_open');
  late final _lightning_db_open = _lightning_db_openPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint64>)>();

  /// Create a database with custom configuration
  ///
  /// # Safety
  /// - path must be a valid null-terminated UTF-8 string
  /// - Returns 0 on success with handle stored in out_handle, error code on failure
  int lightning_db_create_with_config(
    ffi.Pointer<ffi.Char> path,
    int cache_size,
    CompressionType compression_type,
    WalSyncMode wal_sync_mode,
    ffi.Pointer<ffi.Uint64> out_handle,
  ) {
    return _lightning_db_create_with_config(
      path,
      cache_size,
      compression_type.value,
      wal_sync_mode.value,
      out_handle,
    );
  }

  late final _lightning_db_create_with_configPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.UnsignedInt,
              ffi.UnsignedInt,
              ffi.Pointer<ffi.Uint64>)>>('lightning_db_create_with_config');
  late final _lightning_db_create_with_config =
      _lightning_db_create_with_configPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>, int, int, int, ffi.Pointer<ffi.Uint64>)>();

  /// Close a database and free its resources
  ///
  /// # Safety
  /// - The handle must be valid
  /// - The handle must not be used after calling this function
  int lightning_db_close(
    int handle,
  ) {
    return _lightning_db_close(
      handle,
    );
  }

  late final _lightning_db_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_close');
  late final _lightning_db_close =
      _lightning_db_closePtr.asFunction<int Function(int)>();

  /// Put a key-value pair into the database
  ///
  /// # Safety
  /// - key must be valid for key_len bytes
  /// - value must be valid for value_len bytes
  int lightning_db_put(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> value,
    int value_len,
  ) {
    return _lightning_db_put(
      handle,
      key,
      key_len,
      value,
      value_len,
    );
  }

  late final _lightning_db_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>('lightning_db_put');
  late final _lightning_db_put = _lightning_db_putPtr.asFunction<
      int Function(
          int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int)>();

  /// Get a value from the database
  ///
  /// # Safety
  /// - key must be valid for key_len bytes
  /// - The returned ByteResult must be freed using lightning_db_free_bytes
  ByteResult lightning_db_get(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) {
    return _lightning_db_get(
      handle,
      key,
      key_len,
    );
  }

  late final _lightning_db_getPtr = _lookup<
      ffi.NativeFunction<
          ByteResult Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('lightning_db_get');
  late final _lightning_db_get = _lightning_db_getPtr
      .asFunction<ByteResult Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  /// Delete a key from the database
  ///
  /// # Safety
  /// - key must be valid for key_len bytes
  /// - Returns 0 on success (key deleted), 1 if key not found, negative on error
  int lightning_db_delete(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) {
    return _lightning_db_delete(
      handle,
      key,
      key_len,
    );
  }

  late final _lightning_db_deletePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('lightning_db_delete');
  late final _lightning_db_delete = _lightning_db_deletePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  /// Sync the database to disk
  ///
  /// # Safety
  /// - The handle must be valid
  int lightning_db_sync(
    int handle,
  ) {
    return _lightning_db_sync(
      handle,
    );
  }

  late final _lightning_db_syncPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_sync');
  late final _lightning_db_sync =
      _lightning_db_syncPtr.asFunction<int Function(int)>();

  /// Checkpoint the database
  ///
  /// # Safety
  /// - The handle must be valid
  int lightning_db_checkpoint(
    int handle,
  ) {
    return _lightning_db_checkpoint(
      handle,
    );
  }

  late final _lightning_db_checkpointPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_checkpoint');
  late final _lightning_db_checkpoint =
      _lightning_db_checkpointPtr.asFunction<int Function(int)>();

  /// Put with consistency level
  ///
  /// # Safety
  /// - key must be valid for key_len bytes
  /// - value must be valid for value_len bytes
  int lightning_db_put_with_consistency(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> value,
    int value_len,
    ConsistencyLevel consistency,
  ) {
    return _lightning_db_put_with_consistency(
      handle,
      key,
      key_len,
      value,
      value_len,
      consistency.value,
    );
  }

  late final _lightning_db_put_with_consistencyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.UnsignedInt)>>('lightning_db_put_with_consistency');
  late final _lightning_db_put_with_consistency =
      _lightning_db_put_with_consistencyPtr.asFunction<
          int Function(int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>,
              int, int)>();

  /// Get with consistency level
  ///
  /// # Safety
  /// - key must be valid for key_len bytes
  /// - The returned ByteResult must be freed using lightning_db_free_bytes
  ByteResult lightning_db_get_with_consistency(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ConsistencyLevel consistency,
  ) {
    return _lightning_db_get_with_consistency(
      handle,
      key,
      key_len,
      consistency.value,
    );
  }

  late final _lightning_db_get_with_consistencyPtr = _lookup<
      ffi.NativeFunction<
          ByteResult Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr,
              ffi.UnsignedInt)>>('lightning_db_get_with_consistency');
  late final _lightning_db_get_with_consistency =
      _lightning_db_get_with_consistencyPtr.asFunction<
          ByteResult Function(int, ffi.Pointer<ffi.Uint8>, int, int)>();
